--- a/app/src/main/res/drawable/leadersbacground.xml
+++ b/app/src/main/res/drawable/leadersbacground.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="30dp"> </corners>
-    <solid android:color="@color/white"></solid>
+  <corners android:radius="15dp" >
 
+  </corners>
+    <solid android:color="#1A8E24AA"></solid>
 </shape>
