--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -66,7 +66,7 @@
             android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/email"
+            android:hint="@string/user"
             android:background="#80000000"
             android:layout_marginLeft="32dp"
             android:textColor="#CCFFFFFF"
@@ -76,7 +76,7 @@
             android:paddingTop="10dp"
             android:layout_marginBottom="25dp"
             android:layout_gravity="center_vertical"
-            android:drawableLeft="@drawable/email"
+            android:drawableLeft="@drawable/person"
             android:layout_marginRight="32dp"
             android:textColorHint="#80FFFFFF"
             android:paddingLeft="10dp" />
