--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:id="@+id/nav_view"
-        android:background="@color/purple_700"
+        android:background="#4D000000"
         app:headerLayout="@layout/header"
         app:itemTextColor="@color/white"
         android:textAlignment="center"
@@ -29,8 +29,7 @@
     android:orientation="vertical"
     style="@style/Theme.QuizApps"
     android:background="@drawable/backgrouncatorgi"
-
->
+    >
 
 
 <LinearLayout
@@ -77,12 +76,12 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Durkhan"
                 android:id="@+id/userdataname"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:textStyle="bold"
+                android:maxLines="1"
                 android:gravity="center_horizontal" />
         </LinearLayout>
         <LinearLayout
@@ -108,17 +107,7 @@
                 android:id="@+id/level"
                 android:textStyle="bold"
                 android:gravity="center_horizontal" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Beginner"
-                android:id="@+id/levelshower"
-                android:textColor="@color/white"
-                android:textAlignment="center"
-                android:paddingLeft="10dp"
-                android:textSize="14sp"
-                android:textStyle="bold"
-                android:gravity="center_horizontal" />
+
         </LinearLayout>
 
 
@@ -128,11 +117,21 @@
         android:layout_height="wrap_content"
         android:layout_weight="0.7"
         android:gravity="right">
-        <ImageView
+        <androidx.cardview.widget.CardView
             android:layout_width="57dp"
             android:layout_height="57dp"
-            android:background="@drawable/imagebackground"
-            android:id="@+id/profil"/>
+            app:cardCornerRadius="30dp"
+            >
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textColor="@color/white"
+                android:gravity="center"
+                android:id="@+id/profilmain"
+                android:text="D"
+                android:textSize="20sp"
+                />
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
 
 
