--- a/app/src/main/res/layout/activity_question_s.xml
+++ b/app/src/main/res/layout/activity_question_s.xml
@@ -131,8 +131,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Was siehst du auf dem Bild?"
-                    android:textSize="20sp"
+                    android:maxLines="4"
+                    android:autoSizeMaxTextSize="10sp"
                     android:id="@+id/ques"
+                    android:autoSizeMinTextSize="30sp"
                     android:layout_marginBottom="18dp"
                     android:layout_gravity="center_horizontal"
                     android:gravity="center_vertical"
