--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -3,48 +3,32 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
-    android:padding="20dp"
+    android:layout_height="130dp"
+    android:gravity="center"
     android:orientation="vertical"
     android:background="@color/teal_700">
+ <LinearLayout
+     android:layout_width="match_parent"
+     android:orientation="horizontal"
+     android:layout_marginLeft="20dp"
+     android:layout_height="wrap_content">
+     <ImageView
+         android:layout_width="60dp"
+         android:layout_height="60dp"
+         android:background="@drawable/imagebackground"
+         />
+     <TextView
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:text="Quiz App"
+         android:layout_marginLeft="20dp"
+         android:layout_gravity="center"
+         android:textColor="@color/white"
+         android:textAlignment="center"
+         android:textSize="20sp"
+         android:textStyle="bold"
+         android:gravity="center_horizontal" />
+ </LinearLayout>
 
-    <ImageView
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:background="@drawable/imagebackground"
-        />
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/hello"
-            android:textColor="@color/white"
-            android:textAlignment="center"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:gravity="center_horizontal" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Durkhan"
-            android:id="@+id/userdataname"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:gravity="center_horizontal" />
-    </LinearLayout>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="edilov2222@gmail.com"
-        android:textColor="@color/white"
-        android:textAlignment="center"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        android:gravity="center_horizontal" />
+
 </LinearLayout>
