--- a/app/src/main/res/layout/activity_question_s.xml
+++ b/app/src/main/res/layout/activity_question_s.xml
@@ -12,7 +12,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.4">
+        android:layout_weight="0.3">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -21,7 +21,7 @@
             android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:weightSum="2"
                 android:layout_marginTop="10dp"
@@ -30,7 +30,6 @@
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
                     android:layout_weight="1.5">
                     <ImageButton
                         android:layout_width="70dp"
@@ -54,7 +53,6 @@
                         android:id="@+id/timer"
                         android:visibility="gone"
                         android:padding="5dp"
-                        android:gravity="center"
 
                         />
                 </LinearLayout>
@@ -70,13 +68,13 @@
     android:layout_height="0dp"
      android:gravity="center"
     android:orientation="vertical"
-    android:layout_weight="2.6">
+    android:layout_weight="2.7">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginRight="30dp"
         android:layout_marginLeft="30dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="40dp"
         android:orientation="vertical"
         >
         <TextView
@@ -248,5 +246,5 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:visibility="visible"/>
+    android:visibility="gone"/>
 </LinearLayout>
