--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -6,22 +6,23 @@
     android:layout_height="130dp"
     android:gravity="center"
     android:orientation="vertical"
-    android:background="@color/teal_700">
+    android:background="#E6074275">
  <LinearLayout
      android:layout_width="match_parent"
      android:orientation="horizontal"
-     android:layout_marginLeft="20dp"
      android:layout_height="wrap_content">
-     <ImageView
-         android:layout_width="60dp"
-         android:layout_height="60dp"
-         android:background="@drawable/imagebackground"
-         />
+
+         <ImageView
+             android:layout_width="100dp"
+             android:layout_height="100dp"
+             android:src="@drawable/quiz_icon"
+             />
+
+
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Quiz App"
-         android:layout_marginLeft="20dp"
          android:layout_gravity="center"
          android:textColor="@color/white"
          android:textAlignment="center"
