--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -70,13 +70,14 @@
             android:background="#80000000"
             android:layout_marginLeft="32dp"
             android:textColor="#CCFFFFFF"
-            android:textSize="15sp"
+            android:textSize="17sp"
             android:paddingBottom="10dp"
             android:drawablePadding="5dp"
             android:paddingTop="10dp"
             android:layout_marginBottom="25dp"
             android:layout_gravity="center_vertical"
             android:drawableLeft="@drawable/person"
+            android:maxLines="1"
             android:layout_marginRight="32dp"
             android:textColorHint="#80FFFFFF"
             android:paddingLeft="10dp" />
@@ -88,10 +89,11 @@
             android:background="#80000000"
             android:layout_marginLeft="32dp"
             android:textColor="#CCFFFFFF"
-            android:textSize="15sp"
+            android:textSize="17sp"
             android:inputType="textPassword"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
+            android:maxLines="1"
             android:drawablePadding="5dp"
             android:layout_marginBottom="25dp"
             android:layout_gravity="center_vertical"
