--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -71,7 +71,7 @@
             android:background="#80000000"
             android:layout_marginLeft="32dp"
             android:textColor="#CCFFFFFF"
-            android:textSize="15sp"
+            android:textSize="17sp"
             android:paddingBottom="10dp"
             android:paddingTop="10dp"
             android:drawablePadding="5dp"
@@ -79,6 +79,7 @@
             android:layout_gravity="center_vertical"
             android:drawableLeft="@drawable/person"
             android:layout_marginRight="32dp"
+            android:maxLines="1"
             android:textColorHint="#80FFFFFF"
             android:paddingLeft="10dp" />
         <EditText
@@ -89,9 +90,10 @@
             android:background="#80000000"
             android:layout_marginLeft="32dp"
             android:textColor="#CCFFFFFF"
-            android:textSize="15sp"
+            android:textSize="17sp"
             android:paddingBottom="10dp"
             android:paddingTop="10dp"
+            android:maxLines="1"
             android:layout_marginBottom="25dp"
             android:drawablePadding="5dp"
             android:layout_gravity="center_vertical"
@@ -107,9 +109,10 @@
             android:background="#80000000"
             android:layout_marginLeft="32dp"
             android:textColor="#CCFFFFFF"
-            android:textSize="15sp"
+            android:textSize="17sp"
             android:paddingTop="10dp"
             android:inputType="textPassword"
+            android:maxLines="1"
             android:paddingBottom="10dp"
             android:layout_marginBottom="25dp"
             android:drawablePadding="5dp"
