--- a/app/src/main/res/layout/activity_instruction.xml
+++ b/app/src/main/res/layout/activity_instruction.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".Instruction">
+    tools:context=".drawerlayout.Instruction">
 
     <LinearLayout
         android:layout_width="match_parent"
