--- a/app/src/main/res/layout/activity_leaderboard.xml
+++ b/app/src/main/res/layout/activity_leaderboard.xml
@@ -8,7 +8,7 @@
     android:theme="@style/Theme.QuizApps"
     android:background="@drawable/resultbackground"
     android:weightSum="2"
-    tools:context=".LeaderboardActivity">
+    tools:context=".drawerlayout.LeaderboardActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
