--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -121,6 +121,8 @@
             android:layout_width="57dp"
             android:layout_height="57dp"
             app:cardCornerRadius="30dp"
+            android:id="@+id/mainprofil"
+            android:onClick="toprofil"
             >
             <TextView
                 android:layout_width="match_parent"
