--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/transblack"
     android:orientation="vertical"
-    tools:context=".ProfilActivity">
+    tools:context=".drawerlayout.ProfilActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
