--- a/app/src/main/res/layout/activity_question_s.xml
+++ b/app/src/main/res/layout/activity_question_s.xml
@@ -246,5 +246,5 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:visibility="gone"/>
+    android:visibility="visible"/>
 </LinearLayout>
