--- a/app/src/main/res/layout/activity_splash_activty.xml
+++ b/app/src/main/res/layout/activity_splash_activty.xml
@@ -6,27 +6,28 @@
     android:layout_height="match_parent"
     android:background="#CC074275"
     android:gravity="center"
-    tools:context=".SplashActivty">
+    tools:context=".splash.SplashActivty">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/quiz_icon" />
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/applogo" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="-90dp"
             android:text="@string/app_name"
             android:textColor="#FAF9FD"
             android:textSize="25sp"
+            android:layout_marginTop="20dp"
             android:textStyle="bold" />
 
     </LinearLayout>
