--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -6,16 +6,18 @@
     android:layout_height="130dp"
     android:gravity="center"
     android:orientation="vertical"
-    android:background="#E6074275">
+    android:background="#074275">
  <LinearLayout
      android:layout_width="match_parent"
      android:orientation="horizontal"
      android:layout_height="wrap_content">
 
          <ImageView
-             android:layout_width="100dp"
-             android:layout_height="100dp"
-             android:src="@drawable/quiz_icon"
+             android:layout_width="60dp"
+             android:layout_height="60dp"
+             android:layout_marginLeft="20dp"
+             android:layout_marginRight="20dp"
+             android:src="@drawable/applogo"
              />
 
 
